fixed navbar collapse on mobile

--- a/styles.css
+++ b/styles.css
@@ -174,3 +174,6 @@ ul li a:hover{
     display: flex;
     justify-content: center;
 }
+.scales{
+    color:black;
+}
